Added Redis Cache and Pagination for optimization